syntax = "proto3";

package health.v1;

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}

service HealthService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
} 